# aeiou

./: .travis.yml  README.md  configure.ac
src/: Makefile.am  aeiou.c  aeiou.yuck  nifty.h  tr_639_1_de.c  tr_639_1_ja.c  tr_639_1_ru.c  tr_proto.h  tr_unidecode.c  translcc.c  translit.c  translit.yuck  unidecode_tr.c
test/: Makefile.am  readme_test_01.clit  readme_test_02.clit  readme_test_03.clit  readme_test_04.clit  readme_test_05.clit
